# ai-agent-event-playground

./: .env.example  .gitignore  main.py  pyproject.toml
src/ai_agent_event_playground/: agent.py  main.py
tests/: test_main.py
