[project]
name = "ai-agent-event-playground"
version = "0.1.0"
description = "Example agent built on the Microsoft Agent Framework + OpenAI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agent-framework-openai>=1.8.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
ai-agent-event-playground = "ai_agent_event_playground.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent_event_playground"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
extraPaths = ["src"]
